[gd_scene load_steps=6 format=3 uid="uid://cafvqdi25u050"]

[ext_resource type="Script" path="res://addons/godotreq/src/ui/request_panel/request_panel.gd" id="1_gw0l6"]
[ext_resource type="PackedScene" uid="uid://drn8wuaqo5hxs" path="res://addons/godotreq/src/ui/request_container/request_container.tscn" id="2_cuar5"]
[ext_resource type="PackedScene" uid="uid://lswcttpuygq8" path="res://addons/godotreq/src/ui/response_container/response_container.tscn" id="6_webjm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ig5m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ct004"]
content_margin_top = 5.0
content_margin_bottom = 5.0

[node name="GodotRequest" type="TabBar"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_0ig5m")
script = ExtResource("1_gw0l6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(2.08165e-12, 600)
layout_mode = 2

[node name="VSplit" type="VSplitContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 190

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VSplit"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VSplit/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="MenuButton" type="MenuButton" parent="MarginContainer/ScrollContainer/VSplit/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0.482353, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ct004")
text = "HTTP"
flat = false
item_count = 2
popup/item_0/text = "HTTP"
popup/item_0/checked = true
popup/item_0/id = 0
popup/item_1/text = "WebSocket"
popup/item_1/checked = true
popup/item_1/id = 1

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VSplit/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Untitled Request"

[node name="RequestContainer" parent="MarginContainer/ScrollContainer/VSplit/VBoxContainer" instance=ExtResource("2_cuar5")]
layout_mode = 2

[node name="ResponseContainer" parent="MarginContainer/ScrollContainer/VSplit" instance=ExtResource("6_webjm")]
custom_minimum_size = Vector2(2.08165e-12, 400)
layout_mode = 2

[connection signal="send_request" from="MarginContainer/ScrollContainer/VSplit/VBoxContainer/RequestContainer" to="." method="_on_request_container_send_request"]
